add start banner and cannify some stuffs XD
Signed-off-by: samgrande <talktosayan35@gmail.com>

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <!-- #header -->
 
 			<!-- start banner Area -->
-			<section class="banner-area"><img src="img/grim.jpg" alt="" width="600"  height="182"class="image img-fluid"/>
+			<img src="img/cover page.jpg" alt="" width="1044"  height="694"class="imagere img-fluid"/>
+			<section class="banner-area">
 				<div class="container">
 					<div class="row fullscreen align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 banner-left">
@@ -70,13 +71,33 @@
 					</div>
 				</div>	
 			</section>
+			<div class="container">
+			<div class="row fullscreen align-items-center justify-content-between">
+						<div class="col-lg-6 col-md-6 banner-left">
+						  <h6>Quick question</h6>
+						  <p>&nbsp;</p>
+						  <h2>Do you think weed should</h2>
+						  <h2>be legal world wide?</h2>
+						  <p>&nbsp;</p>
+						  <p> Despite of all the stuffs you hear on TV or News that weed make people insane and make them lose touch with reality but what if?</p>
+						  <p>What you call your reality is nothing but a big prison and weed is the only gateaway to the real world and helps to persive the true essence of nature </p>
+						  <p>&nbsp;</p>
+						  <p>P.S - it really fucks up your mind LOL :p </p>
+						  <p> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;-Sam</p>
+						</div>
+						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
+						  <img class="img-fluid image" src="img/weed.png" alt="">
+						</div>
+				</div>
+		</div>
 			
 			<div>
+				<img src="img/43_2x.jpg" width="800" height="600" alt="" class="imagere img-fluid"/> 
 			  <p>&nbsp;</p>
 			  <p>&nbsp;</p>
 			  <p>&nbsp;</p>
 			  <p>&nbsp;</p>
-			</div>
+		    </div>
 			<section class="relative about-banner" id="home">	
 				<div class="overlay overlay-bg"></div>
 				<div class="container">				
